$Rev$
-------------------------------------- 3.9 -----------------------------
[2007/12/12]
common.py           Fix webopen twice open bug
Version.py          change 3.8 to 3.9

-------------------------------------- 3.8.1 -----------------------------
[2007/12/12]
UliPad.py           Remove profile invoke

[2007/12/11]
SvnSupport.py       fix checkout folder spell mistake bug

[2007/12/08]
DirBrowser.py mDirBrowser.py
                    Remember the last add path folder
                    
-------------------------------------- 3.8 -----------------------------
[2007/12/06]
DirBrowser.py       Fix add new directory, when opened if there are children nodes,
                    then will not fire after_expanding event bug
svn_plugin          Migirate svn tool to svn_plugin                    
mRun.py             If the caret is at the last line of the message window, after
                    more lines adding to message window, the caret will goto the 
                    end position, but if the caret is not at the last line, but
                    middle of the lines, after adding lines, the caret will not
                    jump to the end.
                    
[2007/11/28]
mRun.py             Fix message console postion bug, thanks for swordsp
FlatNotebook.py     Update to newest version for mac
SyntaxDialog.py     Fix syntaxdialog bug

[2007/11/26]
acp/python/import.py    
                    Improve default identifiers process, add type judgement
modules/wxctrl/FlatNotebook.py
                    Upgrade to the lastest version thanks to swordsp
                    
[2007/11/23]
ShellWindow.py      Add Paste and Run menu item in popup menu of shell window

[2007/11/21]
SvnSupport.py       Fix cann't support filename has space bug

[2007/11/20]
NCustomLexer.py     Improvement lexer process

[2007/11/19]
NCustomLexer.py     Add new custom lexer class

[2007/11/08]
dropfile plugin     Add dropfile plugin. thanks Tyberius Prime