@@ -1,0 +1,7 @@
+[info]
+author = limodou
+date = 2007-12-17
+version = "0.1"
+description = "Test Canvas API"
+homepage = http://www.donews.net/limodou
+
